--- a/full-stack.html
+++ b/full-stack.html
@@ -86,7 +86,7 @@
 <p><span class="badge badge-light">Rotterdam</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/nutanix/job/oMTCafwb'>Nutanix Careers - MTS - Full Stack Java Developer</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-29</p>
 <hr/>
@@ -110,7 +110,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/loandepot/job/oCKAafwQ'>loanDepot Careers - Sr. Software Engineer - Fullstack</a></h5> 
 <p><span class="badge badge-light">Irvine California</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -153,7 +153,7 @@ experience - New York, Chicago, or San Francisco in New York, New York.</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://brain-effect.join.com/jobs/271571-full-stack-developer-m-f-d'>Job @ BRAINEFFECT (Berlin): Full Stack Developer (... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brain-effect.join.com/jobs/271571-full-stack-developer-m-f-d'>Job @ BRAINEFFECT (Berlin): Full Stack Developer (... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -177,7 +177,7 @@ experience - New York, Chicago, or San Francisco in New York, New York.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/ChabezTech/743999692333032-java-full-stack-developer'>Chabez Tech Java Full Stack Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">New York, NYNYC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -203,11 +203,11 @@ have?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='http://h2oai.applytojob.com/apply/Tvc2kxQVQ7/Full-Stack-Senior-Software-Engineer'>Full Stack Senior Software Engineer - h2o.ai - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://h2oai.applytojob.com/apply/Tvc2kxQVQ7/Full-Stack-Senior-Software-Engineer'>Full Stack Senior Software Engineer - h2o.ai - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://1871.workable.com/j/30BC3023FA'>1871 Member Companies - Jobs: Full-Stack Developer - DeGroot ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://1871.workable.com/j/30BC3023FA'>1871 Member Companies - Jobs: Full-Stack Developer - DeGroot ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Full-Stack Developer - DeGroot Logistics at 1871 
 Member Companies.</p>
@@ -216,7 +216,7 @@ Member Companies.</p>
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of Full Stack (PHP/JS) Developer at Pod Point Ltd.</p>
 <hr/>
-<h5><a href='https://emw.workable.com/j/7608EE5314?viewed=true'>AAS3780-0 - Fullstack Software Developer, The ... - EMW, Inc. - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://emw.workable.com/j/7608EE5314?viewed=true'>AAS3780-0 - Fullstack Software Developer, The ... - EMW, Inc. - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of AAS3780-0 - Fullstack Software Developer, The Hague 
 - Mon 22nd July at EMW, Inc.</p>
@@ -295,7 +295,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -311,7 +311,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light">San Francisco San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/papercut/161ea9b1-ef1f-42d8-b71a-db731972d553'>PaperCut Software - Full Stack Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
